# global-ui

./: README.md
GlobalUiApp/: settings.gradle
GlobalUiApp/app/: CMakeLists.txt  build.gradle
GlobalUiApp/app/src/main/: AndroidManifest.xml
GlobalUiApp/app/src/main/cpp/agg-src/examples/: agg2d_demo.cpp  freetype_test.cpp
GlobalUiApp/app/src/main/cpp/agg-src/include/platform/: agg_platform_support.h
GlobalUiApp/app/src/main/cpp/agg-src/src/platform/sdl2/: agg_extra.cpp  agg_extra.h  agg_platform_support.cpp  agg_platform_support.h
GlobalUiApp/app/src/main/cpp/core/: JNIBridge.cpp  JNIBridge.h
GlobalUiApp/app/src/main/java/com/heaven7/globalui/app/: App.java  MainActivity.java
GlobalUiApp/app/src/main/java/com/heaven7/globalui/util/: AssetsUtils.java  JNIBridge.java
GlobalUiApp/app/src/main/java/org/libsdl/app/: SDL.java  SDLActivity.java
GlobalUiApp/app/src/main/res/layout/: activity_main.xml
GlobalUiApp/gradle/wrapper/: gradle-wrapper.properties
qt_layouts/: CMakeLists.txt  readme.md
qt_layouts/core/: SafeLinkedList.h  SynchronizedPool.h  System.h  h7_common.h  locks.h
qt_layouts/input/: VelocityTracker.cpp  VelocityTracker.h
qt_layouts/qt_layouts/: AbstractLayout.h  BorderLayout.cpp  BorderLayout.h  FlowLayout.cpp  FlowLayout.h  FrameLayout.cpp  FrameLayout.h
qt_layouts/test/: main.cpp  test_qt_view.cpp
qt_layouts/view/: ButtonView.cpp  ButtonView.h  Canvas.cpp  Canvas.h  ContainerWidget.cpp  ContainerWidget.h  FrameLayout.cpp  FrameLayout.h  GestureDetector.cpp  GestureDetector.h  Gravity.h  ImageView.cpp  ImageView.h  LinearLayout.cpp  LinearLayout.h  MotionEvent.cpp  MotionEvent.h  SkiaCanvas.cpp  SkiaCanvas.h  TextView.cpp  TextView.h  View.cpp  View.h  ViewConfiguration.h  view_common.cpp  view_common.h
